Fixed formatting stuff and added more html pages

--- a/GroupNullProject/templates/archiveacc.html
+++ b/GroupNullProject/templates/archiveacc.html
@@ -38,12 +38,12 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/assignprof/" class="nav-link link-dark">
                 Assign Professor
             </a>
         </li>
         <li>
-            <a href="editacc.html" class="nav-link link-dark">
+            <a href="/editacc/" class="nav-link link-dark">
                 Edit Account
             </a>
         </li>
@@ -53,7 +53,7 @@
             </a>
         </li>
         <li>
-            <a href="archiveacc.html" class="nav-link active" aria-current="page">
+            <a href="/archiveacc/" class="nav-link active" aria-current="page">
                 Archive Account
             </a>
         </li>
@@ -121,5 +121,4 @@
               <label style="color: crimson; font-size: x-large">{{ msg }}</label>
           </div>
       </div>
-
-  </form>
+  </form></div>
