--- a/GroupNullProject/templates/assignprof.html
+++ b/GroupNullProject/templates/assignprof.html
@@ -38,12 +38,12 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link active">
+            <a href="/assignprof/" class="nav-link active">
                 Assign Professor
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/editacc/" class="nav-link link-dark">
                 Edit Account
             </a>
         </li>
