--- a/GroupNullProject/templates/assignTAToCourse.html
+++ b/GroupNullProject/templates/assignTAToCourse.html
@@ -76,7 +76,7 @@
 </div>
 
   <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
-  <form action="/assignTAToCourse/" method="post" style="max-width: available">
+  <form action="/tatocourse/" method="post" style="max-width: available">
     {% csrf_token %}
     <div class="form-group row">
         <label for="ta" class="col-lg-12 col-form-label">Select TA (TA. Name -Username)</label>
