--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -48,7 +48,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/editacc/" class="nav-link link-dark">
                 Edit Account
             </a>
         </li>
