--- a/GroupNullProject/templates/editacc.html
+++ b/GroupNullProject/templates/editacc.html
@@ -75,7 +75,7 @@
 
 
   <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
-  <form action="/createuser/" method="post">
+  <form action="/editacc/" method="post">
     {% csrf_token %}
     <div class="form-group row">
         <label for="fullname" class="col-sm-5 col-form-label">Full Name</label>
