added as many sidebars as I could (couldn't change dynamic ones)

--- a/GroupNullProject/templates/archiveacc.html
+++ b/GroupNullProject/templates/archiveacc.html
@@ -38,12 +38,17 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/assignprof/" class="nav-link link-dark">
                 Assign Professor
             </a>
         </li>
+                <li>
+            <a href="/tatocourse/" class="nav-link link-dark">
+                Assign TA To Course
+            </a>
+        </li>
         <li>
-            <a href="editacc.html" class="nav-link link-dark">
+            <a href="/editacc/" class="nav-link link-dark">
                 Edit Account
             </a>
         </li>
@@ -53,8 +58,13 @@
             </a>
         </li>
         <li>
-            <a href="archiveacc.html" class="nav-link active" aria-current="page">
+            <a href="/archiveacc/" class="nav-link active">
                 Archive Account
+            </a>
+        </li>
+                <li>
+            <a href="/editownacc/" class="nav-link link-dark">
+                Edit Own Contact
             </a>
         </li>
     </ul>
@@ -71,7 +81,7 @@
       <h1 class="display-4"><strong>Archive Account</strong></h1>
   </div>
 </div>
-
+<!---------side bar------------------------------------------>
 
 
   <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
