--- a/GroupNullProject/templates/assignprof.html
+++ b/GroupNullProject/templates/assignprof.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <!-- ----------------- Side Bar --------------------------- -->
+<!-- ----------------- Side Bar --------------------------- -->
 <div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 14%; height: 100%; position: absolute;">
     <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
     <hr>
@@ -38,18 +38,33 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link active">
+            <a href="/assignprof/" class="nav-link active">
                 Assign Professor
             </a>
         </li>
+                <li>
+            <a href="/tatocourse/" class="nav-link link-dark">
+                Assign TA To Course
+            </a>
+        </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/editacc/" class="nav-link link-dark">
                 Edit Account
             </a>
         </li>
         <li>
             <a href="/lookup/" class="nav-link link-dark">
                 Lookup Data
+            </a>
+        </li>
+        <li>
+            <a href="/archiveacc/" class="nav-link link-dark">
+                Archive Account
+            </a>
+        </li>
+                <li>
+            <a href="/editownacc/" class="nav-link link-dark">
+                Edit Own Contact
             </a>
         </li>
     </ul>
@@ -61,7 +76,7 @@
     </div>
 </div>
 
-  <!-- ----------------- End Side Bar --------------------------- -->
+<!-- ----------------- End Side Bar --------------------------- -->
 
 
  <div class="row justify-content-center">
