--- a/GroupNullProject/templates/dataLookup.html
+++ b/GroupNullProject/templates/dataLookup.html
@@ -38,13 +38,33 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/assignprof/" class="nav-link link-dark">
+                Assign Professor
+            </a>
+        </li>
+                <li>
+            <a href="/tatocourse/" class="nav-link link-dark">
+                Assign TA To Course
+            </a>
+        </li>
+        <li>
+            <a href="/editacc/" class="nav-link link-dark">
                 Edit Account
             </a>
         </li>
         <li>
             <a href="/lookup/" class="nav-link active">
                 Lookup Data
+            </a>
+        </li>
+        <li>
+            <a href="/archiveacc/" class="nav-link link-dark">
+                Archive Account
+            </a>
+        </li>
+                <li>
+            <a href="/editownacc/" class="nav-link link-dark">
+                Edit Own Contact
             </a>
         </li>
     </ul>
