--- a/GroupNullProject/templates/editacc.html
+++ b/GroupNullProject/templates/editacc.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <!-- ----------------- Side Bar --------------------------- -->
+<!-- ----------------- Side Bar --------------------------- -->
 <div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 14%; height: 100%; position: absolute;">
     <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
     <hr>
@@ -38,12 +38,17 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/assignprof/" class="nav-link link-dark">
                 Assign Professor
             </a>
         </li>
+                <li>
+            <a href="/tatocourse/" class="nav-link link-dark">
+                Assign TA To Course
+            </a>
+        </li>
         <li>
-            <a href="editacc.html" class="nav-link active" aria-current="page">
+            <a href="/editacc/" class="nav-link active">
                 Edit Account
             </a>
         </li>
@@ -53,8 +58,13 @@
             </a>
         </li>
         <li>
-            <a href="archiveacc.html" class="nav-link link-dark">
+            <a href="/archiveacc/" class="nav-link link-dark">
                 Archive Account
+            </a>
+        </li>
+                <li>
+            <a href="/editownacc/" class="nav-link link-dark">
+                Edit Own Contact
             </a>
         </li>
     </ul>
@@ -65,6 +75,8 @@
         </a>
     </div>
 </div>
+
+<!-- ----------------- End Side Bar --------------------------- -->
 
  <div class="row justify-content-center">
   <div style="margin-top: 5%; margin-left: 10%; text-align: center;" class="col-lg-4">
