--- a/GroupNullProject/templates/contactinfoAdmin.html
+++ b/GroupNullProject/templates/contactinfoAdmin.html
@@ -12,7 +12,69 @@
     <title>Change Contact Info</title>
 </head>
 <body>
-
+<!-- ----------------- Side Bar --------------------------- -->
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 14%; height: 100%; position: absolute;">
+    <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto h5">
+        <li class="nav-item">
+            <a href="/supervisor/" class="nav-link link-dark" aria-current="page">
+                Home
+            </a>
+        </li>
+        <li>
+            <a href="/createuser/" class="nav-link link-dark">
+                Create Account
+            </a>
+        </li>
+        <li>
+            <a href="/createcourse/" class="nav-link link-dark">
+                Create Course
+            </a>
+        </li>
+        <li>
+            <a href="/createlab/" class="nav-link link-dark">
+                Create Lab
+            </a>
+        </li>
+        <li>
+            <a href="/assignprof/" class="nav-link link-dark">
+                Assign Professor
+            </a>
+        </li>
+                <li>
+            <a href="/tatocourse/" class="nav-link link-dark">
+                Assign TA To Course
+            </a>
+        </li>
+        <li>
+            <a href="/editacc/" class="nav-link link-dark">
+                Edit Account
+            </a>
+        </li>
+        <li>
+            <a href="/lookup/" class="nav-link link-dark">
+                Lookup Data
+            </a>
+        </li>
+        <li>
+            <a href="/archiveacc/" class="nav-link link-dark">
+                Archive Account
+            </a>
+        </li>
+                <li>
+            <a href="/editownacc/" class="nav-link active">
+                Edit Own Contact
+            </a>
+        </li>
+    </ul>
+    <hr>
+    <div class="">
+        <a href="/" class="nav-link link-dark text-danger">
+            <strong>Log Out</strong>
+        </a>
+    </div>
+</div>
  <div class="row justify-content-center">
   <div style="margin-top: 5%; margin-left: 10%; text-align: center;" class="col-lg-4">
       <h1 class="display-4"><strong>Change Contact Info</strong></h1>
