--- a/GroupNullProject/templates/contactinfoProf.html
+++ b/GroupNullProject/templates/contactinfoProf.html
@@ -12,7 +12,39 @@
     <title>Change Contact Info</title>
 </head>
 <body>
-
+<!-- ----------------- Side Bar --------------------------- -->
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 14%; height: 100%; position: absolute;">
+    <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto h5">
+        <li class="nav-item">
+            <a href="/professor/" class="nav-link link-dark" aria-current="page">
+                Home
+            </a>
+        </li>
+        <li>
+            <a href="/#/" class="nav-link dark">
+                Assign TA
+            </a>
+        </li>
+        <li>
+            <a href="/editownacc/" class="nav-link active">
+                Edit Own Contact
+            </a>
+        </li>
+        <li>
+            <a href="/contactstaff/" class="nav-link dark">
+                Contact Staff
+            </a>
+        </li>
+    </ul>
+    <hr>
+    <div class="">
+        <a href="/" class="nav-link link-dark text-danger">
+            <strong>Log Out</strong>
+        </a>
+    </div>
+</div>
  <div class="row justify-content-center">
   <div style="margin-top: 5%; margin-left: 10%; text-align: center;" class="col-lg-4">
       <h1 class="display-4"><strong>Change Contact Info</strong></h1>
