Fixed assigning issue

--- a/GroupNullProject/templates/tapage.html
+++ b/GroupNullProject/templates/tapage.html
@@ -23,6 +23,11 @@
             </a>
         </li>
         <li>
+            <a href="#" class="nav-link link-dark">
+                Edit Account
+            </a>
+        </li>
+        <li>
             <a href="/contactstaff/" class="nav-link link-dark">
                 Contact Staff
             </a>
