--- a/GroupNullProject/templates/contactinfoProf.html
+++ b/GroupNullProject/templates/contactinfoProf.html
@@ -60,20 +60,20 @@
              <label for="username" class="col-sm-5 col-form-label">Current Username</label>
              <div class="col-sm-7">
                  <input name="username" type="text" class="form-control" id="username"
-                        placeholder="Current Username...">
+                        placeholder="{{ user.username }}">
              </div>
          </div>
          <div class="form-group row">
              <label for="phNumber" class="col-sm-5 col-form-label">Phone Number</label>
         <div class="col-sm-7">
-          <input name="phNumber" type="text" class="form-control" id="phNumber" placeholder="Change Phone...">
+          <input name="phNumber" type="text" class="form-control" id="phNumber" value="{{ user.phoneNum }}">
         </div>
     </div>
 
     <div class="form-group row">
         <label for="mailAdrs" class="col-sm-5 col-form-label">Mailing Address</label>
         <div class="col-sm-7">
-          <input name="mailAdrs" type="text" class="form-control" id="mailAdrs" placeholder="Change Address...">
+          <input name="mailAdrs" type="text" class="form-control" id="mailAdrs" value="{{ user.mailAddress }}">
         </div>
     </div>
 
