added assignTAToLab.html file changed some views of assigning ta to lab add url or assignTaTolab

--- a/GroupNullProject/templates/profpage.html
+++ b/GroupNullProject/templates/profpage.html
@@ -23,7 +23,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/tatoLab/" class="nav-link link-dark">
                 Assign TA
             </a>
         </li>
