--- a/GroupNullProject/templates/tapage.html
+++ b/GroupNullProject/templates/tapage.html
@@ -60,11 +60,13 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>test</td>
-            <td>value</td>
-            <td>@mdo</td>
-        </tr>
+        {% for course in coursesQuery %}
+                <tr>
+                    <td>{{ course.name }}</td>
+                    <td>{{ course.section }}</td>
+                    <td>{{ "what goes here?" }}</td>
+                </tr>
+        {% endfor %}
 
         </tbody>
     </table>
@@ -87,11 +89,13 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>test</td>
-            <td>value</td>
-            <td>@mdo</td>
-        </tr>
+        {% for lab in labsQuery %}
+                <tr>
+                    <td>{{ lab.name }}</td>
+                    <td>{{ lab.section }}</td>
+                    <td>{{ "what goes here?" }}</td>
+                </tr>
+        {% endfor %}
 
         </tbody>
     </table>
