fixed HTML issues

--- a/GroupNullProject/templates/assignTAToLab.html
+++ b/GroupNullProject/templates/assignTAToLab.html
@@ -18,12 +18,12 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto h5">
         <li class="nav-item">
-            <a href="/professor/" class="nav-link active" aria-current="page">
+            <a href="/professor/" class="nav-link link-dark" aria-current="page">
                 Home
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="#" class="nav-link active">
                 Assign TA
             </a>
         </li>
