--- a/GroupNullProject/templates/contactinfoProf.html
+++ b/GroupNullProject/templates/contactinfoProf.html
@@ -23,7 +23,7 @@
             </a>
         </li>
         <li>
-            <a href="/#/" class="nav-link dark">
+            <a href="/tatoLab/" class="nav-link dark">
                 Assign TA
             </a>
         </li>
